--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -153,7 +153,7 @@
 			<div class="modal-header">
 				<button type="button" class="close" data-dismiss="modal">x</button>
 				<h2 class="modal-title">
-					<strong> Your new Italian buddy! </strong>
+					<strong> Your superhero match! </strong>
 				</h2>
 			</div>
 			<div class="modal-body">
@@ -174,19 +174,26 @@
 			friendPhoto: $("#photo").val(),
 			scores: [$("#q1"), $("#q2"), $("#q3"), $("#q4"), $("#q5"), $("#q6"), $("#q7"), $("#q8"), $("#q9"), $("#q10")]
 		};
-		var currentURL = window.location.origin;
-		$.post(currentURL + "/api/friends", newFriend, function(data){
-			if(data){
-				$("#matchName").text(data.friendName);
-				$("#matchImg").attr("src", data.friendPhoto);
-				$("#resultsModal").modal("toggle");
+			newFriend.scores = newFriend.scores.map(function(jQueryObject){
+				return $(jQueryObject).val();
+			})
+		console.log("new friend", newFriend.scores);
+		// var currentURL = window.location.origin;
+		$.post("/api/friends", newFriend, function(err, data){
+			if(err) {
+				console.log(err)
 			}
-			else{
-				alert("Please fill out all fields before submitting!")
-			}
-		});
+			$("#matchName").text(data.friendName);
+			$("#matchImg").attr("src", data.friendPhoto);
+			$("#resultsModal").modal("toggle");
+			console.log("friendname", data.friendName);
+		}); 
 	});
 </script>
 </body>
 </html>
 
+
+
+<!-- var currentURL = window.location.origin;
+		
